# snetx

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  readme.md  requirements.txt
snetx/: __init__.py  utils.py
snetx/cuend/: __init__.py  neuron.py  nnfunc.py  utils.py
snetx/cuend/C/: surrogate.in
snetx/dataset/: __init__.py  dvs_transform.py  vision.py
snetx/dataset/ddp/: vision.py
snetx/models/: __init__.py  _shortcuts.py  ms_resnet.py  sew_resnet.py  svggnet.py  vgg.py
snetx/snn/: __init__.py  algorithm.py  neuron.py  nnfunc.py  nwarmup.py  snnBN.py
snetx/snn/C/: neuron.cu  surrogate.in
snetx/training/: classification.py
test/: main.py
